--- a/doc/egyptian_fractions.ipynb
+++ b/doc/egyptian_fractions.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "id": "rubber-germany",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "id": "parliamentary-victorian",
    "metadata": {},
    "outputs": [
@@ -82,8 +82,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6 µs, sys: 1 µs, total: 7 µs\n",
-      "Wall time: 17.2 µs\n"
+      "CPU times: user 20.4 ms, sys: 932 µs, total: 21.4 ms\n",
+      "Wall time: 21.1 ms\n"
      ]
     },
     {
@@ -92,19 +92,19 @@
        "[(1, 2), (1, 3), (1, 7), (1, 43), (1, 18447), (1, 184184)]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%time\n",
+    "%%time\n",
     "EgyptPrime(2023, 2024)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "id": "digital-wesley",
    "metadata": {},
    "outputs": [
@@ -112,8 +112,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6 µs, sys: 2 µs, total: 8 µs\n",
-      "Wall time: 15 µs\n"
+      "CPU times: user 198 ms, sys: 2.03 ms, total: 200 ms\n",
+      "Wall time: 199 ms\n"
      ]
     },
     {
@@ -130,20 +130,20 @@
        " (1, 714892578)]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%time\n",
+    "%%time\n",
     "EgyptPrime(37811, 37813)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -157,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
