remove unnecessary rounding

--- a/doc/egyptian_fractions.ipynb
+++ b/doc/egyptian_fractions.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "rubber-germany",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
     "\n",
     "def Low(x, y):\n",
     "    b = x if y - x == 1 else (ExtendedGCD(x, y)[1] + y) % y\n",
-    "    a, b = round(x * b / y), b\n",
+    "    a, b = x * b // y, b\n",
     "    gcd = ExtendedGCD(a, b)[0]\n",
     "    return a//gcd, b//gcd\n",
     "\n",
@@ -74,70 +74,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "parliamentary-victorian",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 20.4 ms, sys: 932 µs, total: 21.4 ms\n",
-      "Wall time: 21.1 ms\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[(1, 2), (1, 3), (1, 7), (1, 43), (1, 18447), (1, 184184)]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
+    "\n",
     "EgyptPrime(2023, 2024)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "digital-wesley",
+   "execution_count": null,
+   "id": "995c6689",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 198 ms, sys: 2.03 ms, total: 200 ms\n",
-      "Wall time: 199 ms\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[(1, 2),\n",
-       " (1, 3),\n",
-       " (1, 7),\n",
-       " (1, 43),\n",
-       " (1, 2002),\n",
-       " (1, 811668),\n",
-       " (1, 13722852),\n",
-       " (1, 89340303),\n",
-       " (1, 714892578)]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
+    "\n",
+    "EgyptPrime(2023, 2024)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "digital-wesley",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
     "EgyptPrime(37811, 37813)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c113ddf8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "EgyptPrime(2000002, 2000003)"
    ]
   }
  ],
