--- a/doc/egyptian_fractions.ipynb
+++ b/doc/egyptian_fractions.ipynb
@@ -7,10 +7,17 @@
    "source": [
     "# Egyptian Fractions\n",
     "\n",
-    "with small denominators\n",
-    "\n",
-    "* minimizes sum of denominator factors?\n",
-    "* compare with Wolfram Alpha: https://www.wolframalpha.com/input?i=egyptian+fraction+2023%2F2024"
+    "with small denominators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "089c22d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools"
    ]
   },
   {
@@ -34,7 +41,7 @@
     "    gcd = ExtendedGCD(a, b)[0]\n",
     "    return a//gcd, b//gcd\n",
     "\n",
-    "def EgyptPrime_raw(x, y):\n",
+    "def EgyptFract_raw(x, y):\n",
     "    whole = []\n",
     "    ret = []\n",
     "    if x >= y:\n",
@@ -44,10 +51,11 @@
     "        x2, y2 = Low(x, y)\n",
     "        a, b = x*y2-x2*y, y*y2\n",
     "        gcd = ExtendedGCD(a, b)[0]\n",
+    "        #print(x, y, x2, y2, a, b)\n",
     "        a, b = a//gcd, b//gcd\n",
     "        ret.append((a, b))\n",
     "        x, y = x2, y2\n",
-    "    ret = reversed(ret + [(x, y)] + whole)\n",
+    "    ret = ret + [(x, y)] + whole\n",
     "    return list(ret)\n",
     "\n",
     "def Merge(eg):\n",
@@ -66,10 +74,11 @@
     "        j, x, y = ones[-1]\n",
     "        ret.append((x, y))\n",
     "        i = j+1\n",
+    "    ret.sort()\n",
     "    return ret\n",
     "\n",
-    "def EgyptPrime(x, y):\n",
-    "    return Merge(EgyptPrime_raw(x, y))"
+    "def EgyptFract(x, y):\n",
+    "    return Merge(EgyptFract_raw(x, y))"
    ]
   },
   {
@@ -81,19 +90,7 @@
    "source": [
     "%%time\n",
     "\n",
-    "EgyptPrime(2023, 2024)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "995c6689",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "\n",
-    "EgyptPrime(2023, 2024)"
+    "EgyptFract(2023,2024)"
    ]
   },
   {
@@ -105,7 +102,7 @@
    "source": [
     "%%time\n",
     "\n",
-    "EgyptPrime(37811, 37813)"
+    "EgyptFract(37811, 37813)"
    ]
   },
   {
@@ -117,7 +114,7 @@
    "source": [
     "%%time\n",
     "\n",
-    "EgyptPrime(2000002, 2000003)"
+    "EgyptFract(2000002, 2000003)"
    ]
   }
  ],
@@ -137,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
